<resources>
    <string name="app_name">ehu Bank</string>
    <string name="title_activity_pagina_principal">PaginaPrincipalActivity</string>

    <!--string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>-->

    <string name="action_settings">Configuración</string>
    <string name="title_activity_actividad_pantalla_principal">ActividadPantallaPrincipal</string>
    <string name="title_home">Inicio</string>
    <!--<string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_actividad_pantalla_principal_2">ActividadPantallaPrincipal_2
    </string>-->
    <string name="tab_text_1">Inicio</string>
    <string name="tab_text_2">Mis cuentas</string>
    <string name="tab_text_3">Mi perfil</string>
    <!--<string name="section_format">Hello World from section: %1$d</string>-->

    <!--
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_actividad_configuración">Configuración</string>
-->
    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <!-- <string name="pref_header_general">General</string>-->

    <!--<string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>-->

    <!--<string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>-->

    <!-- Example settings for Data & Sync -->
    <!--<string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>-->

    <string-array name="idiomas">
        <item>Castellano</item>
        <item>English</item>
    </string-array>

    <string-array name="idiomas_val">
        <item>es</item>
        <item>en</item>
    </string-array>
    <string name="fragment_perfil_usuario_nombre">Nombre</string>
    <string name="fragment_perfil_usuario_apellidos">Apellidos:</string>
    <string name="fragment_perfil_usuario_fecha_nacimiento">Fecha de nacimiento:</string>
    <string name="fragment_perfil_usuario_domicilio">Domicilio:</string>
    <string name="fragment_perfil_usuario_cambio_clave">Modificar contraseña</string>
    <string name="iniciar_sesion_cabecera">Iniciar Sesión</string>
    <string name="iniciar_sesion_identificador">Identificador</string>
    <string name="iniciar_sesion_clave">Contraseña</string>
    <string name="iniciar_sesion_btnEntrar">Entrar</string>
    <string name="iniciar_sesion_lblNoTienesCuenta">¿No tienes cuenta?</string>
    <string name="iniciar_sesion_btnRegistro">Abrir cuenta</string>
    <string name="interfaz_cambio_clave_lblClaveAntigua">Contraseña antigua</string>
    <string name="interfaz_cambio_clave_lblClaveNueva">Nueva contraseña</string>
    <string name="interfaz_cambio_clave_lblConfirmarClave">Repetir nueva contraseña</string>
    <string name="pantalla_nuevo_transferencia_interna">Transferencia bancaria interna</string>
    <string name="pantalla_nuevo_transferencia_contacto">Envío a contacto</string>
    <string name="pantalla_nuevo_transferencia_externa">Transferencia bancaria externa</string>
    <string name="pantalla_nuevo_cuenta_bancaria">Cuenta bancaria</string>
    <string name="realizar_transaccion_cuenta_origen">Cuenta de origen</string>
    <string name="realizar_transaccion_cuenta_destino">Cuenta de destino</string>
    <string name="realizar_transaccion_contacto_contacto_receptor">Contacto receptor</string>
    <string name="realizar_transaccion_contacto_btnSelecionarContacto">Seleccionar Contacto</string>
    <string name="realizar_transaccion_cantidad">Cantidad (en euros)</string>
    <string name="realizar_transaccion_concepto">Concepto</string>
    <string name="realizar_transaccion_btnEnviar">Enviar</string>
    <string name="registrarse_abrir_cuenta">Abrir cuenta</string>
    <string name="registrarse_identificador">Identificador</string>
    <string name="registrarse_clave">Contraseña</string>
    <string name="registrarse_nombre">Nombre</string>
    <string name="registrarse_fecha_nacimiento">Fecha de nacimiento</string>
    <string name="registrarse_apellidos">Apellidos</string>
    <string name="registrarse_telefono">Teléfono de contacto</string>
    <string name="registrarse_direccion">Dirección</string>
    <string name="registrarse_terminos_y_condiciones">He leído y acepto los Términos y Condiciones</string>
    <string name="registrarse_btn_abrir_cuenta">Abrir cuenta</string>
    <string name="conf_preferencias_datos_idioma">Datos de Idioma</string>
    <string name="conf_preferencias_idioma_preferente">Idioma preferente</string>
    <string name="conf_preferencias_elige_idioma">Elige tu idioma</string>
    <string name="registrarse_imagen">Imagen</string>
    <string name="registrarse_imagen_btn">Hacer una foto</string>
    <string name="action_cerrar_sesion">Cerrar sesión</string>
    <string name="add_widget">Add widget</string>
    <string name="widget_ultimas_transacciones">Últimas transacciones</string>
    <string name="widget_no_transacciones">No hay transacciones realizadas</string>
    <string name="fragment_perfil_usuario_imagen">Imagen</string>
    <string name="fragment_principal_cuentas_bancarias_no_cuentas">No se ha creado ninguna cuenta bancaria</string>
    <string name="fragment_perfil_usuario_cambio_exito">Clave modificada con éxito</string>
    <string name="fragment_perfil_usuario_clave_antigua_no_valida">La clave antigua no es válida</string>
    <string name="fragment_perfil_usuario_clave_error">La clave no se ha podido modificar</string>
    <string name="fragment_perfil_usuario_clave_no_coincide">Las claves no coinciden</string>
    <string name="actividad_nuevo_no_cuentas_bancarias_suficientes">No tienes suficientes cuentas bancarias para realizar esta acción.</string>
    <string name="mainactivity_rellenar_datos">Rellene todos los datos</string>
    <string name="mainactivity_inicio_sesion_incorrecto">Inicio de sesión incorrecto. Revise los datos e inténtelo de nuevo.</string>
    <string name="actividad_registro_condiciones_necesarias">Debes aceptar los términos y condiciones para poder registrarte</string>
    <string name="actividad_registro_rellenar_datos">Rellena todos los datos para poder registrarte</string>
    <string name="actividad_registro_no_red">Se ha producido un error. Compruebe sus datos e inténtelo de nuevo más tarde.</string>
    <string name="punto_mensajeria_transferencia_realizada">Transferencia realizada</string>
    <string name="punto_mensajeria_cuenta_origen">"Cuenta de origen: "</string>
    <string name="punto_mensajeria_cuenta_destino">"Cuenta de destino: "</string>
    <string name="actividad_transaccion_compartir_datos">Compartir datos</string>
    <string name="actividad_transaccion_saludo">"Hola, te acabo de enviar "</string>
    <string name="actividad_transaccion_cantidad">" euros a tu cuenta. Concepto:"</string>
    <string name="actividad_transaccion_txt_contacto">"Contacto: "</string>
</resources>
