<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:columnCount="2"
    android:padding="5dp"
    android:orientation="vertical">
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:contentPadding="5dp"
        android:onClick="evtBtnTransferInterna">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pantalla_nuevo_transferencia_interna"/>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="20dp"
        app:contentPadding="5dp"
        android:onClick="evtBtnTransferContacto">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/pantalla_nuevo_transferencia_contacto"/>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="20dp"
        app:contentPadding="5dp"
        android:onClick="evtTransferExterna">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/pantalla_nuevo_transferencia_externa"/>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:padding="20dp"
        app:contentPadding="5dp"
        android:onClick="evtNuevaCuentaBancaria">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/pantalla_nuevo_cuenta_bancaria"/>
    </android.support.v7.widget.CardView>

</LinearLayout>